force-app/main/default/objects/maps__CalEventLookup__c/maps__CalEventLookup__c.object-meta.xml
<CustomObject>
    <label>Maps Calendar Event Lookup</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Calendar Event Lookups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>