force-app/main/default/objects/maps__CalEventLookup__c/fields/maps__BaseObjectId__c.field-meta.xml
<CustomField>
    <fullName>maps__BaseObjectId__c</fullName>
    <label>Base Object Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>