force-app/main/default/objects/maps__CalEventLookup__c/fields/maps__CalEventBaseObj__c.field-meta.xml
<CustomField>
    <fullName>maps__CalEventBaseObj__c</fullName>
    <label>Maps Calendar Event Base Object</label>
    <referenceTo>maps__CalEventBaseObj__c</referenceTo>
    <relationshipName>Maps_Event_Parents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>