force-app/main/default/objects/maps__CalEventLookup__c/fields/maps__LocationSource__c.field-meta.xml
<CustomField>
    <fullName>maps__LocationSource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Location Source</label>
    <type>Checkbox</type>
</CustomField>