force-app/main/default/objects/maps__CalEventLookup__c/fields/maps__LookupFieldAPI__c.field-meta.xml
<CustomField>
    <fullName>maps__LookupFieldAPI__c</fullName>
    <label>Lookup Field API</label>
    <length>50</length>
    <type>Text</type>
</CustomField>