force-app/main/default/objects/maps__CalEventLookup__c/fields/maps__ObjectAPI__c.field-meta.xml
<CustomField>
    <fullName>maps__ObjectAPI__c</fullName>
    <label>Object API</label>
    <length>100</length>
    <type>Text</type>
</CustomField>