force-app/main/default/objects/maps__CalEventLookup__c/fields/maps__TypeAPI__c.field-meta.xml
<CustomField>
    <fullName>maps__TypeAPI__c</fullName>
    <label>TypeAPI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>