force-app/main/default/objects/maps__CalEventLookup__c/fields/maps__TypeDefaultValue__c.field-meta.xml
<CustomField>
    <fullName>maps__TypeDefaultValue__c</fullName>
    <label>TypeDefaultValue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>